--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 
                     </div>
                     <div class="col-md-6 mb-4">
-                        <a href="#" class="remove-underline">
+                        <a href="page-listing/kids_furniture.html" class="remove-underline">
                             <div class="h-100 p-5 rounded-3 fade-out" style="background-image: url(resources/images/categories/children.jpg); background-position: center left;background-size: cover;">
                                 <p class="fs-4 fw-bold text-white text-hover badge bg-info"><i class="fas fa-tag"></i> Kids' Furniture</p>
                                 <p class="text-white">Backpacks & Lunch Boxes, Bedding & Slumber Bags, Indoor Furniture, Outdoor Furniture</p>
@@ -233,7 +233,7 @@
                 </div>
                 <div class="row align-items-md-stretch">
                     <div class="col-md-4">
-                        <a href="#" class="remove-underline">
+                        <a href="page-listing/household.html" class="remove-underline">
                             <div class="h-75 p-5 rounded-3 fade-out" style="background-image: url(resources/images/categories/household.jpg); background-position: center left;background-size: cover;">
                                 <p class="fs-4 fw-bold text-white text-hover badge bg-success"><i class="fas fa-tag"></i> Household</p>
                                 <p class="text-white">Kitchenware, furniture, clothing, bedding, books, tools,...</p>
@@ -241,7 +241,7 @@
                         </a>
                     </div>
                     <div class="col-md-4">
-                        <a href="#" class="remove-underline">
+                        <a href="page-listing/vehicle.html" class="remove-underline">
                             <div class="h-75 p-5 rounded-3 fade-out" style="background-image: url(resources/images/categories/vehicle.jpg); background-position: center left;background-size: cover;">
                                 <p class="fs-4 fw-bold text-white text-hover badge bg-secondary"><i class="fas fa-tag"></i> Vehicle</p>
                                 <p class="text-white">Bicycles, motorcycles, cars, trucks,...</p>
@@ -249,7 +249,7 @@
                         </a>
                     </div>
                     <div class="col-md-4">
-                        <a href="#" class="remove-underline">
+                        <a href="page-listing/all_1.html" class="remove-underline">
                             <div class="h-75 p-5 rounded-3 fade-out" style="background-image: url(resources/images/categories/all.jpg); background-position: center left;background-size: cover;">
                                 <p class="fs-4 fw-bold text-white text-hover badge bg-primary"><i class="fas fa-tag"></i> All</p>
                                 <p class="text-white">Anything</p>
@@ -888,7 +888,7 @@
                             <ul>
                                 <li><i class="fas fa-chevron-right"></i></i> <a href="page-listing/fashion.html">Fashion</a></li>
                                 <li><i class="fas fa-chevron-right"></i></i> <a href="page-listing/electronics.html">Electronics</a></li>
-                                <li><i class="fas fa-chevron-right"></i></i> <a href="page-listing/kids'_furniture.html">Kids' Furniture</a></li>
+                                <li><i class="fas fa-chevron-right"></i></i> <a href="page-listing/kids_furniture.html">Kids' Furniture</a></li>
                                 <li><i class="fas fa-chevron-right"></i></i> <a href="page-listing/household.html">Household</a></li>
                                 <li><i class="fas fa-chevron-right"></i></i> <a href="page-listing/vehicle.html">Vehicle</a></li>
                             </ul>
