--- a/page-listing/all_1.html
+++ b/page-listing/all_1.html
@@ -19,7 +19,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 
-    <title>OBG | Fashion</title>
+    <title>OBG | Anything</title>
     <link rel="icon" href="../resources/images/logo.png">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -140,12 +140,10 @@
     <div class="mt-3">-</div>
     <div class="container mt-5">
         <div class="row">
-            <a href="page-listing/fashion.html" class="remove-underline">
-                <div class="container-fluid p-5 rounded-3 fade-out" style="background-image: url(../resources/images/categories/fashion.jpg); background-position: center left; background-size: cover;">
-                    <p class="fs-4 fw-bold text-white text-hover badge bg-danger"><i class="fas fa-tag"></i> Fashion
-                    </p>
-                    <p class="col-md-8 fs-4 text-white">Clothing, footwear, lifestyle, accessories, makeup,...
-                    </p>
+            <a href="all_1.html" class="remove-underline">
+                <div class="h-75 p-5 rounded-3 fade-out" style="background-image: url(../resources/images/categories/all.jpg); background-position: center left;background-size: cover;">
+                    <p class="fs-4 fw-bold text-white text-hover badge bg-primary"><i class="fas fa-tag"></i> All</p>
+                    <p class="text-white">Anything</p>
                 </div>
             </a>
         </div>
@@ -163,8 +161,8 @@
             </ul>
             <div class="d-flex ">
                 <a class="nav-link-style me-3 " href="# "><i class="fas fa-chevron-left text-danger "></i></a>
-                <span class="fs-md ">1 / 5</span>
-                <a class="nav-link-style ms-3 " href="# "><i class="fas fa-chevron-right text-danger "></i></a>
+                <span class="fs-md ">1 / 3</span>
+                <a class="nav-link-style ms-3 " href="all_2.html"><i class="fas fa-chevron-right text-danger "></i></a>
             </div>
         </div>
 
@@ -533,8 +531,40 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6 ">
+            <div class="col-lg-3 col-md-6">
+                <div class="card remove-border card-hover mb-5 border-0">
+                    <div class="position-absolute start-0 top-0 pt-3 ps-3" style="z-index: 11;">
+                        <span class="d-table badge bg-success mb-1">Exchange</span>
+                        <span class="d-table badge bg-danger">Sale</span>
+                    </div>
+                    <a href="item-detail/trousers.html">
 
+                        <img src="../resources/images/electronic/electronic1-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
+                    </a>
+                    <div class="card-body rounded-3">
+                        <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Quebec
+                        </p>
+                        <a href="item-detail/trousers.html" class="text-dark">
+                            <h5 class="card-title hover-color-red fs-base">PC COMPUTER</h5>
+                        </a>
+                    </div>
+                    <div class="card-footer bg-white">
+                        <div class="row align-items-center g-0">
+                            <div class="col-auto">
+                                <img src="../resources/images/avatar/01.jpg" width="32" height="32" class="rounded-circle" alt="avatar">
+                            </div>
+                            <div class="col ms-2">
+                                <a href="#" class="text-muted">Samuel</a>
+                            </div>
+                            <div class="col-auto">
+                                <button class="btn" onclick="Toasty( )">
+                                    <i class="fas fa-cart-plus" data-bs-toggle="tooltip" data-bs-placement="top"
+                                        title="Add to card"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <!-- End Products -->
@@ -543,17 +573,15 @@
                 <li class="page-item "><a class="page-link text-danger " href="# "><i class="ci-arrow-left me-2 "></i>Prev</a></li>
             </ul>
             <ul class="pagination ">
-                <li class="page-item d-sm-none "><span class="page-link page-link-static ">1 / 5</span></li>
+                <li class="page-item d-sm-none "><span class="page-link page-link-static ">1 / 3</span></li>
                 <li class="page-item active d-none d-sm-block " aria-current="page "><span class="page-link bg-danger border-0 ">1<span
                             class="visually-hidden ">(current)</span></span>
                 </li>
-                <li class="page-item d-none d-sm-block "><a class="page-link text-danger " href="# ">2</a></li>
-                <li class="page-item d-none d-sm-block "><a class="page-link text-danger " href="# ">3</a></li>
-                <li class="page-item d-none d-sm-block "><a class="page-link text-danger " href="# ">4</a></li>
-                <li class="page-item d-none d-sm-block "><a class="page-link text-danger " href="# ">5</a></li>
+                <li class="page-item d-none d-sm-block "><a class="page-link text-danger " href="all_2.html">2</a></li>
+                <li class="page-item d-none d-sm-block "><a class="page-link text-danger " href="all_3.html">3</a></li>
             </ul>
             <ul class="pagination ">
-                <li class="page-item "><a class="page-link text-danger " href="# " aria-label="Next ">Next<i
+                <li class="page-item "><a class="page-link text-danger " href="all_2.html" aria-label="Next ">Next<i
                             class="ci-arrow-right ms-2 "></i></a></li>
             </ul>
         </nav>
