--- a/item-detail/hp_computer.html
+++ b/item-detail/hp_computer.html
@@ -15,7 +15,7 @@
     <!-- Google font -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
-    <title>White Fur Slippers</title>
+    <title>HP Computer</title>
     <link rel="icon" href="../resources/images/logo.png">
     <link rel="stylesheet" href="style.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -183,19 +183,19 @@
     <div class="mt-2">-</div>
 
     <!-- Hero -->
-    <div class="hero d-flex align-items-center justify-content-center">
+    <div class="hero d-flex align-items-center justify-content-center" style="background-image: url('../resources/images/categories/electronic.jpg');">
         <div class="row">
             <div class="col-lg-12">
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb breadcrumb-transparent justify-content-center mb-4">
                         <li class="breadcrumb-item"><a href="../index.html" class="text-white">Home</a></li>
-                        <li class="breadcrumb-item"><a href="../page-listing/fashion.html" class="text-white">Fashion</a></li>
-                        <li class="breadcrumb-item text-white active fw-light">Trousers</li>
+                        <li class="breadcrumb-item"><a href="../page-listing/electronics.html" class="text-white">Electronis</a></li>
+                        <li class="breadcrumb-item text-white active fw-light">HP Computer</li>
                     </ol>
                 </nav>
             </div>
             <div class="col-lg-12">
-                <h2 class="text-center text-white">White Fur Slippers</h2>
+                <h2 class="text-center text-white">HP Computer</h2>
             </div>
             <div class="col-lg-12">
                 <p class="text-center text-white">
@@ -233,20 +233,32 @@
                         <div class="popup-gallery">
                             <div class="row">
                                 <div class="col-md-3 mt-3">
-                                    <a href="../resources/images/fashion/fashion6-1.jpg">
-                                        <img src="../resources/images/fashion/fashion6-1.jpg" width="100%" class="for-mobile-preview">
+                                    <a href="../resources/images/electronic/electronic1-1.jpg">
+                                        <img src="../resources/images/electronic/electronic1-1.jpg" width="100%" class="for-mobile-preview">
                                     </a>
 
                                 </div>
                                 <div class="col-md-3 mt-3">
-                                    <a href="../resources/images/fashion/fashion6-2.jpg">
-                                        <img src="../resources/images/fashion/fashion6-2.jpg" width="100%" class="for-mobile-preview">
+                                    <a href="../resources/images/electronic/electronic1-2.jpg">
+                                        <img src="../resources/images/electronic/electronic1-2.jpg" width="100%" class="for-mobile-preview">
                                     </a>
 
                                 </div>
                                 <div class="col-md-3 mt-3">
-                                    <a href="../resources/images/fashion/fashion6-3.jpg">
-                                        <img src="../resources/images/fashion/fashion6-3.jpg" width="100%" class="for-mobile-preview">
+                                    <a href="../resources/images/electronic/electronic1-3.jpg">
+                                        <img src="../resources/images/electronic/electronic1-3.jpg" width="100%" class="for-mobile-preview">
+                                    </a>
+
+                                </div>
+                                <div class="col-md-3 mt-3">
+                                    <a href="../resources/images/electronic/electronic1-4.jpg">
+                                        <img src="../resources/images/electronic/electronic1-4.jpg" width="100%" class="for-mobile-preview">
+                                    </a>
+
+                                </div>
+                                <div class="col-md-3 mt-3">
+                                    <a href="../resources/images/electronic/electronic1-5.jpg">
+                                        <img src="../resources/images/electronic/electronic1-5.jpg" width="100%" class="for-mobile-preview">
                                     </a>
 
                                 </div>
@@ -265,7 +277,7 @@
                     <div class="tab-pane fade" id="comments">
                         <div class="card bg-white border border-light p-4 mb-4">
                             <div class="d-flex justify-content-between align-items-center mb-3">
-                                <div><a href="#" class="h5 text-dark">Awesome</a>
+                                <div><a href="#" class="h5 text-dark">Awesome place</a>
                                     <ul class="list-unstyled d-flex mt-1 mb-0 text-muted">
                                         <li class="list-item small me-3">by Margaret Mead</li>
                                         <li class="list-item small">2 weeks ago</li>
@@ -303,8 +315,13 @@
             </div>
             <div class="col-lg-4">
                 <div class="card bg-soft border-light p-3">
+                    <div class="d-flex align-items-baseline">
+                        <span class="h3 font-weight-bold mb-0 mr-1">$ 250</span>
+                    </div>
                     | Quantity: 1
                 </div>
+
+                <div class="card border-light mt-4 p-3"><button class="btn btn-primary">Buy Now</button></div>
                 <div class="card border-light mt-4 p-3">
                     <h5 class="font-weight-normal">Property Owner</h5>
                     <div class="media d-flex align-items-center my-3">
@@ -405,19 +422,54 @@
     <section>
         <div class="container">
             <h2 class="h3 text-center pb-4">Style with</h2>
-            <div class="row">
-                <div class="col-lg-3">
-                    <div class="card remove-border card-hover mb-5">
+            <div class="row mt-3">
+                <div class="col-lg-3 col-md-6">
+                    <div class="card remove-border card-hover mb-5 border-0">
+                        <div class="position-absolute start-0 top-0 pt-3 ps-3" style="z-index: 11;">
+                            <span class="d-table badge bg-success mb-1">Exchange</span>
+                            <span class="d-table badge bg-danger">Sale</span>
+                        </div>
+                        <a href="item-detail/trousers.html">
+
+                            <img src="../resources/images/electronic/electronic5-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
+                        </a>
+                        <div class="card-body rounded-3">
+                            <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Quebec
+                            </p>
+                            <a href="item-detail/trousers.html" class="text-dark">
+                                <h5 class="card-title hover-color-red fs-base">Acer Aspire Laptop</h5>
+                            </a>
+                        </div>
+                        <div class="card-footer bg-white">
+                            <div class="row align-items-center g-0">
+                                <div class="col-auto">
+                                    <img src="../resources/images/avatar/05.jpg" width="32" height="32" class="rounded-circle" alt="avatar">
+                                </div>
+                                <div class="col ms-2">
+                                    <a href="#" class="text-muted">Samuel</a>
+                                </div>
+                                <div class="col-auto">
+                                    <button class="btn" onclick="Toasty( )">
+                                        <i class="fas fa-cart-plus" data-bs-toggle="tooltip" data-bs-placement="top"
+                                            title="Add to card"></i>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="card remove-border card-hover mb-5 border-0">
                         <div class="position-absolute start-0 top-0 pt-3 ps-3" style="z-index: 11;">
                             <span class="d-table badge bg-success mb-1">Exchange</span>
                             <span class="d-table badge bg-danger">Sale</span>
                         </div>
                         <a href="#">
-                            <img src="../resources/images/fashion/fashion2-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
+                            <img src="../resources/images/electronic/electronic6-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                         </a>
                         <div class="card-body rounded-3">
                             <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Toronto</p>
-                            <h5 class="card-title hover-color-red fs-base">HP COMPUTER</h5>
+                            <h5 class="card-title hover-color-red fs-base">Canon Pixma Printer</h5>
                         </div>
                         <div class="card-footer bg-white">
                             <div class="row align-items-center g-0">
@@ -437,18 +489,18 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3">
-                    <div class="card remove-border card-hover mb-5">
+                <div class="col-lg-3 col-md-6">
+                    <div class="card remove-border card-hover mb-5 border-0">
                         <div class="position-absolute start-0 top-0 pt-3 ps-3" style="z-index: 11;">
-                            <span class="d-table badge bg-success mb-1">Exchange</span>
                             <span class="d-table badge bg-danger">Sale</span>
                         </div>
                         <a href="#">
-                            <img src="../resources/images/fashion/fashion3-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
+                            <img src="../resources/images/electronic/electronic7-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                         </a>
                         <div class="card-body rounded-3">
-                            <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Toronto</p>
-                            <h5 class="card-title hover-color-red fs-base">HP COMPUTER</h5>
+                            <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Halifax
+                            </p>
+                            <h5 class="card-title hover-color-red fs-base">Sony Xperia Z3</h5>
                         </div>
                         <div class="card-footer bg-white">
                             <div class="row align-items-center g-0">
@@ -456,7 +508,7 @@
                                     <img src="../resources/images/avatar/03.jpg" width="32" height="32" class="rounded-circle" alt="">
                                 </div>
                                 <div class="col ms-2">
-                                    <a href="#" class="text-muted">Dennis</a>
+                                    <a href="#" class="text-muted">Bryan</a>
                                 </div>
                                 <div class="col-auto">
                                     <button class="btn" onclick="Toasty( )">
@@ -468,18 +520,19 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3">
-                    <div class="card remove-border card-hover mb-5">
+                <div class="col-lg-3 col-md-6">
+                    <div class="card remove-border card-hover mb-5 border-0">
                         <div class="position-absolute start-0 top-0 pt-3 ps-3" style="z-index: 11;">
                             <span class="d-table badge bg-success mb-1">Exchange</span>
                             <span class="d-table badge bg-danger">Sale</span>
                         </div>
                         <a href="#">
-                            <img src="../resources/images/fashion/fashion4-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
+                            <img src="../resources/images/electronic/electronic8-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                         </a>
                         <div class="card-body rounded-3">
-                            <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Toronto</p>
-                            <h5 class="card-title hover-color-red fs-base">HP COMPUTER</h5>
+                            <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Fredericton
+                            </p>
+                            <h5 class="card-title hover-color-red fs-base">Vintage Telephone</h5>
                         </div>
                         <div class="card-footer bg-white">
                             <div class="row align-items-center g-0">
@@ -487,38 +540,7 @@
                                     <img src="../resources/images/avatar/04.jpg" width="32" height="32" class="rounded-circle" alt="">
                                 </div>
                                 <div class="col ms-2">
-                                    <a href="#" class="text-muted">Dennis</a>
-                                </div>
-                                <div class="col-auto">
-                                    <button class="btn" onclick="Toasty( )">
-                                        <i class="fas fa-cart-plus" data-bs-toggle="tooltip" data-bs-placement="top"
-                                            title="Add to card"></i>
-                                    </button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3">
-                    <div class="card remove-border card-hover mb-5">
-                        <div class="position-absolute start-0 top-0 pt-3 ps-3" style="z-index: 11;">
-                            <span class="d-table badge bg-success mb-1">Exchange</span>
-                            <span class="d-table badge bg-danger">Sale</span>
-                        </div>
-                        <a href="#">
-                            <img src="../resources/images/fashion/fashion5-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
-                        </a>
-                        <div class="card-body rounded-3">
-                            <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Toronto</p>
-                            <h5 class="card-title hover-color-red fs-base">HP COMPUTER</h5>
-                        </div>
-                        <div class="card-footer bg-white">
-                            <div class="row align-items-center g-0">
-                                <div class="col-auto">
-                                    <img src="../resources/images/avatar/05.jpg" width="32" height="32" class="rounded-circle" alt="">
-                                </div>
-                                <div class="col ms-2">
-                                    <a href="#" class="text-muted">Dennis</a>
+                                    <a href="#" class="text-muted">Louis</a>
                                 </div>
                                 <div class="col-auto">
                                     <button class="btn" onclick="Toasty( )">
@@ -798,6 +820,35 @@
             return image;
         }
     </script>
+
+    <!-- Back to top -->
+    <button type="button" class="btn" id="btn-back-to-top">
+        <i class="fas fa-arrow-up"></i>
+    </button>
+    <script>
+        let mybutton = document.getElementById("btn-back-to-top");
+        window.onscroll = function() {
+            scrollFunction();
+        };
+
+        function scrollFunction() {
+            if (
+                document.body.scrollTop > 20 ||
+                document.documentElement.scrollTop > 20
+            ) {
+                mybutton.style.display = "block";
+            } else {
+                mybutton.style.display = "none";
+            }
+        }
+        mybutton.addEventListener("click", backToTop);
+
+        function backToTop() {
+            document.body.scrollTop = 0;
+            document.documentElement.scrollTop = 0;
+        }
+    </script>
+    <!-- End Back to top -->
 
 
     <!-- Bootstrap Bundle with Popper -->
