--- a/item-detail/trousers.html
+++ b/item-detail/trousers.html
@@ -271,7 +271,7 @@
                     <div class="tab-pane fade" id="comments">
                         <div class="card bg-white border border-light p-4 mb-4">
                             <div class="d-flex justify-content-between align-items-center mb-3">
-                                <div><a href="#" class="h5 text-dark">Awesome place</a>
+                                <div><a href="#" class="h5 text-dark">Awesome</a>
                                     <ul class="list-unstyled d-flex mt-1 mb-0 text-muted">
                                         <li class="list-item small me-3">by Margaret Mead</li>
                                         <li class="list-item small">2 weeks ago</li>
@@ -309,17 +309,18 @@
             </div>
             <div class="col-lg-4">
                 <div class="card bg-soft border-light p-3">
-                    <div class="d-flex align-items-baseline"><span class="h3 font-weight-bold mb-0 mr-1">$ 250</span></div>
+                    <div class="d-flex align-items-baseline"><span class="h3 font-weight-bold mb-0 mr-1">$ 50</span></div>
+                    | Quantity: 1
                 </div>
                 <div class="card border-light mt-4 p-3"><button class="btn btn-primary">Buy Now</button></div>
                 <div class="card border-light mt-4 p-3">
                     <h5 class="font-weight-normal">Property Owner</h5>
                     <div class="media d-flex align-items-center my-3">
                         <a href="#" class="avatar-lg me-2">
-                            <img class="img-fluid rounded-circle" src="../resources/images/avatar/15.jpg" width="42" alt="avatar">
+                            <img class="img-fluid rounded-circle" src="../resources/images/avatar/01.jpg" width="42" alt="avatar">
                         </a>
                         <div class="avatar-name">
-                            <a class="text-dark" href="#">Jose Leos</a>
+                            <a class="text-dark" href="../profiles/samuel.html">William Samuel</a>
                         </div>
                     </div>
                     <button type="button" class="btn btn-primary mb-3" data-bs-toggle="modal" data-bs-target="#exchange">Exchange</button>
