--- a/index.html
+++ b/index.html
@@ -310,12 +310,14 @@
                             <span class="d-table badge bg-success mb-1">Exchange</span>
                             <span class="d-table badge bg-danger">Sale</span>
                         </div>
-                        <a href="#">
+                        <a href="item-detail/hp_computer.html">
                             <img src="resources/images/electronic/electronic1-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                         </a>
                         <div class="card-body rounded-3">
                             <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Toronto</p>
-                            <h5 class="card-title hover-color-red fs-base">HP COMPUTER</h5>
+                            <a href="item-detail/hp_computer.html" class="text-dark">
+                                <h5 class="card-title hover-color-red fs-base">HP COMPUTER</h5>
+                            </a>
                         </div>
                         <div class="card-footer bg-white">
                             <div class="row align-items-center g-0">
@@ -340,13 +342,15 @@
                         <div class="position-absolute start-0 top-0 pt-3 ps-3" style="z-index: 11;">
                             <span class="d-table badge bg-danger">Sale</span>
                         </div>
-                        <a href="#">
+                        <a href="item-detail/climbing_frame.html">
                             <img src="resources/images/children/children1-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                         </a>
                         <div class="card-body rounded-3">
                             <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Halifax
                             </p>
-                            <h5 class="card-title hover-color-red fs-base">Climbing frame</h5>
+                            <a href="item-detail/climbing_frame.html" class="text-dark">
+                                <h5 class="card-title hover-color-red fs-base">Climbing frame</h5>
+                            </a>
                         </div>
                         <div class="card-footer bg-white">
                             <div class="row align-items-center g-0">
@@ -372,13 +376,15 @@
                             <span class="d-table badge bg-success mb-1">Exchange</span>
                             <span class="d-table badge bg-danger">Sale</span>
                         </div>
-                        <a href="#">
+                        <a href="item-detail/fridge.html">
                             <img src="resources/images/household/household1-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                         </a>
                         <div class="card-body rounded-3">
                             <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Fredericton
                             </p>
-                            <h5 class="card-title hover-color-red fs-base">Fridge</h5>
+                            <a href="item-detail/fridge.html" class="text-dark">
+                                <h5 class="card-title hover-color-red fs-base">Fridge</h5>
+                            </a>
                         </div>
                         <div class="card-footer bg-white">
                             <div class="row align-items-center g-0">
@@ -405,13 +411,15 @@
                         <div class="position-absolute start-0 top-0 pt-3 ps-3" style="z-index: 11;">
                             <span class="d-table badge bg-success mb-1">Exchange</span>
                         </div>
-                        <a href="#">
+                        <a href="item-detail/white_fur_slippers.html">
                             <img src="resources/images/fashion/fashion6-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                         </a>
                         <div class="card-body rounded-3">
                             <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Winnipeg
                             </p>
-                            <h5 class="card-title hover-color-red fs-base">White Fur Slippers</h5>
+                            <a href="item-detail/white_fur_slippers.html" class="text-dark">
+                                <h5 class="card-title hover-color-red fs-base">White Fur Slippers</h5>
+                            </a>
                         </div>
                         <div class="card-footer bg-white">
                             <div class="row align-items-center g-0">
@@ -436,14 +444,16 @@
                         <div class="position-absolute start-0 top-0 pt-3 ps-3" style="z-index: 11;">
                             <span class="d-table badge bg-danger">Sale</span>
                         </div>
-                        <a href="#">
+                        <a href="item-detail/acer_aspire_laptop.html">
 
                             <img src="resources/images/electronic/electronic5-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fixss">
                         </a>
                         <div class="card-body rounded-3">
                             <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Victoria
                             </p>
-                            <h5 class="card-title hover-color-red fs-base">Acer Aspire Laptop</h5>
+                            <a href="item-detail/acer_aspire_laptop.html" class="text-dark">
+                                <h5 class="card-title hover-color-red fs-base">Acer Aspire Laptop</h5>
+                            </a>
                         </div>
                         <div class="card-footer bg-white">
                             <div class="row align-items-center g-0">
@@ -468,14 +478,16 @@
                         <div class="position-absolute start-0 top-0 pt-3 ps-3" style="z-index: 11;">
                             <span class="d-table badge bg-danger">Sale</span>
                         </div>
-                        <a href="#">
+                        <a href="item-detail/childs_car_seat.html">
 
                             <img src="resources/images/children/children4-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                         </a>
                         <div class="card-body rounded-3">
                             <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Charlottetown
                             </p>
-                            <h5 class="card-title hover-color-red fs-base">CHILD'S CAR SEAT</h5>
+                            <a href="item-detail/childs_car_seat.html" class="text-dark">
+                                <h5 class="card-title hover-color-red fs-base">CHILD'S CAR SEAT</h5>
+                            </a>
                         </div>
                         <div class="card-footer bg-white">
                             <div class="row align-items-center g-0">
@@ -501,13 +513,15 @@
                             <span class="d-table badge bg-success mb-1">Exchange</span>
                             <span class="d-table badge bg-danger">Sale</span>
                         </div>
-                        <a href="#">
+                        <a href="item-detail/1966_landrover_series.html">
                             <img src="resources/images/vehicle/vehicle1-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                         </a>
                         <div class="card-body rounded-3">
                             <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Saskatoon
                             </p>
-                            <h5 class="card-title hover-color-red fs-base">1966 Landrover Series</h5>
+                            <a href="item-detail/1966_landrover_series.html" class="text-dark">
+                                <h5 class="card-title hover-color-red fs-base">1966 Landrover Series</h5>
+                            </a>
                         </div>
                         <div class="card-footer bg-white">
                             <div class="row align-items-center g-0">
