--- a/index.html
+++ b/index.html
@@ -573,14 +573,16 @@
                             <span class="d-table badge bg-success mb-1">Exchange</span>
                             <span class="d-table badge bg-danger">Sale</span>
                         </div>
-                        <a href="#">
+                        <a href="item-detail/trousers.html">
 
                             <img src="resources/images/fashion/fashion1-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                         </a>
                         <div class="card-body rounded-3">
                             <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Quebec
                             </p>
-                            <h5 class="card-title hover-color-red fs-base">Trousers</h5>
+                            <a href="item-detail/trousers.html" class="text-dark">
+                                <h5 class="card-title hover-color-red fs-base">Trousers</h5>
+                            </a>
                         </div>
                         <div class="card-footer bg-white">
                             <div class="row align-items-center g-0">
@@ -588,7 +590,7 @@
                                     <img src="resources/images/avatar/01.jpg" width="32" height="32" class="rounded-circle" alt="avatar">
                                 </div>
                                 <div class="col ms-2">
-                                    <a href="#" class="text-muted">Samuel</a>
+                                    <a href="profiles/samuel.html" class="text-muted">Samuel</a>
                                 </div>
                                 <div class="col-auto">
                                     <button class="btn" onclick="Toasty( )">
@@ -606,12 +608,14 @@
                             <span class="d-table badge bg-success mb-1">Exchange</span>
                             <span class="d-table badge bg-danger">Sale</span>
                         </div>
-                        <a href="#">
+                        <a href="item-detail/hp_computer.html">
                             <img src="resources/images/electronic/electronic1-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                         </a>
                         <div class="card-body rounded-3">
                             <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Toronto</p>
-                            <h5 class="card-title hover-color-red fs-base">HP COMPUTER</h5>
+                            <a href="item-detail/hp_computer.html" class="text-dark">
+                                <h5 class="card-title hover-color-red fs-base">HP COMPUTER</h5>
+                            </a>
                         </div>
                         <div class="card-footer bg-white">
                             <div class="row align-items-center g-0">
@@ -636,13 +640,15 @@
                         <div class="position-absolute start-0 top-0 pt-3 ps-3" style="z-index: 11;">
                             <span class="d-table badge bg-danger">Sale</span>
                         </div>
-                        <a href="#">
+                        <a href="item-detail/climbing_frame.html">
                             <img src="resources/images/children/children1-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                         </a>
                         <div class="card-body rounded-3">
                             <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Halifax
                             </p>
-                            <h5 class="card-title hover-color-red fs-base">Climbing frame</h5>
+                            <a href="item-detail/climbing_frame.html" class="text-dark">
+                                <h5 class="card-title hover-color-red fs-base">Climbing frame</h5>
+                            </a>
                         </div>
                         <div class="card-footer bg-white">
                             <div class="row align-items-center g-0">
@@ -668,13 +674,15 @@
                             <span class="d-table badge bg-success mb-1">Exchange</span>
                             <span class="d-table badge bg-danger">Sale</span>
                         </div>
-                        <a href="#">
+                        <a href="item-detail/fridge.html">
                             <img src="resources/images/household/household1-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                         </a>
                         <div class="card-body rounded-3">
                             <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Fredericton
                             </p>
-                            <h5 class="card-title hover-color-red fs-base">Fridge</h5>
+                            <a href="item-detail/fridge.html" class="text-dark">
+                                <h5 class="card-title hover-color-red fs-base">Fridge</h5>
+                            </a>
                         </div>
                         <div class="card-footer bg-white">
                             <div class="row align-items-center g-0">
@@ -701,13 +709,15 @@
                         <div class="position-absolute start-0 top-0 pt-3 ps-3" style="z-index: 11;">
                             <span class="d-table badge bg-success mb-1">Exchange</span>
                         </div>
-                        <a href="#">
+                        <a href="item-detail/white_fur_slippers.html">
                             <img src="resources/images/fashion/fashion6-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                         </a>
                         <div class="card-body rounded-3">
                             <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Winnipeg
                             </p>
-                            <h5 class="card-title hover-color-red fs-base">White Fur Slippers</h5>
+                            <a href="item-detail/white_fur_slippers.htmls" class="text-dark">
+                                <h5 class="card-title hover-color-red fs-base">White Fur Slippers</h5>
+                            </a>
                         </div>
                         <div class="card-footer bg-white">
                             <div class="row align-items-center g-0">
@@ -732,14 +742,16 @@
                         <div class="position-absolute start-0 top-0 pt-3 ps-3" style="z-index: 11;">
                             <span class="d-table badge bg-danger">Sale</span>
                         </div>
-                        <a href="#">
+                        <a href="item-detail/acer_aspire_laptop.html">
 
                             <img src="resources/images/electronic/electronic5-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                         </a>
                         <div class="card-body rounded-3">
                             <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Victoria
                             </p>
-                            <h5 class="card-title hover-color-red fs-base">Acer Aspire Laptop</h5>
+                            <a href="item-detail/acer_aspire_laptop.html" class="text-dark">
+                                <h5 class="card-title hover-color-red fs-base">Acer Aspire Laptop</h5>
+                            </a>
                         </div>
                         <div class="card-footer bg-white">
                             <div class="row align-items-center g-0">
@@ -764,14 +776,16 @@
                         <div class="position-absolute start-0 top-0 pt-3 ps-3" style="z-index: 11;">
                             <span class="d-table badge bg-danger">Sale</span>
                         </div>
-                        <a href="#">
+                        <a href="item-detail/childs_car_seat.html">
 
                             <img src="resources/images/children/children4-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                         </a>
                         <div class="card-body rounded-3">
                             <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Charlottetown
                             </p>
-                            <h5 class="card-title hover-color-red fs-base">CHILD'S CAR SEAT</h5>
+                            <a href="item-detail/childs_car_seat.html" class="text-dark">
+                                <h5 class="card-title hover-color-red fs-base">CHILD'S CAR SEAT</h5>
+                            </a>
                         </div>
                         <div class="card-footer bg-white">
                             <div class="row align-items-center g-0">
@@ -797,13 +811,15 @@
                             <span class="d-table badge bg-success mb-1">Exchange</span>
                             <span class="d-table badge bg-danger">Sale</span>
                         </div>
-                        <a href="#">
+                        <a href="item-detail/1966_landrover_series.html">
                             <img src="resources/images/vehicle/vehicle1-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                         </a>
                         <div class="card-body rounded-3">
                             <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Saskatoon
                             </p>
-                            <h5 class="card-title hover-color-red fs-base">1966 Landrover Series</h5>
+                            <a href="item-detail/1966_landrover_series.html" class="text-dark">
+                                <h5 class="card-title hover-color-red fs-base">1966 Landrover Series</h5>
+                            </a>
                         </div>
                         <div class="card-footer bg-white">
                             <div class="row align-items-center g-0">
