--- a/orders.html
+++ b/orders.html
@@ -184,7 +184,7 @@
                         </div>
                         <div class="col-lg-3 col-6">
                             <span class="text-muted tracking-title">SHIPPED DATE:</span><br>
-                            <span class="tracking-content">09 Oct, 2021</span>
+                            <span class="tracking-content">___</span>
                         </div>
                         <div class="col-lg-3 col-6">
                             <span class="text-muted tracking-title">STATUS:</span> <br>
@@ -215,7 +215,7 @@
                         </div>
                         <div class="col-lg-3 col-6">
                             <span class="text-muted tracking-title">SHIPPED DATE:</span><br>
-                            <span class="tracking-content">25 Sep, 2021</span>
+                            <span class="tracking-content">___</span>
                         </div>
                         <div class="col-lg-3 col-6">
                             <span class="text-muted tracking-title">STATUS:</span> <br>
@@ -243,7 +243,7 @@
                         </div>
                         <div class="col-lg-3 col-6">
                             <span class="text-muted tracking-title">SHIPPED DATE:</span><br>
-                            <span class="tracking-content">07 Sep, 2021</span>
+                            <span class="tracking-content">07 Oct, 2021</span>
                         </div>
                         <div class="col-lg-3 col-6">
                             <span class="text-muted tracking-title">STATUS:</span> <br>
