--- a/orders/order2.html
+++ b/orders/order2.html
@@ -187,7 +187,7 @@
                         </div>
                         <div class="col-lg-3 col-6">
                             <span class="text-muted tracking-title">SHIPPED DATE:</span><br>
-                            <span class="tracking-content">09 Oct, 2021</span>
+                            <span class="tracking-content">___</span>
                         </div>
                         <div class="col-lg-3 col-6">
                             <span class="text-muted tracking-title">STATUS:</span> <br>
