--- a/page-listing/kids_furniture.html
+++ b/page-listing/kids_furniture.html
@@ -176,14 +176,14 @@
                         <span class="d-table badge bg-success mb-1">Exchange</span>
                         <span class="d-table badge bg-danger">Sale</span>
                     </div>
-                    <a href="item-detail/trousers.html">
+                    <a href="../item-detail/climbing_frame.html">
 
                         <img src="../resources/images/children/children1-1.jpg" alt="" width="100%" height="225" class="rounded-3 img-fix">
                     </a>
                     <div class="card-body rounded-3">
                         <p class="card-text text-secondary"><i class="fas fa-map-marked text-muted"></i> Quebec
                         </p>
-                        <a href="item-detail/trousers.html" class="text-dark">
+                        <a href="../item-detail/climbing_frame.html" class="text-dark">
                             <h5 class="card-title hover-color-red fs-base">Climbing Frame</h5>
                         </a>
                     </div>
